[gd_scene load_steps=2 format=3 uid="uid://5ye6f6br2bts"]

[ext_resource type="Script" path="res://scenes/ui/ui.gd" id="1_53jec"]

[node name="UserInterface" type="CanvasLayer"]
script = ExtResource("1_53jec")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="NotificationContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10

[node name="NotificationLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/NotificationContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 48

[node name="InteractionContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="InteractionLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/InteractionContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24

[node name="ButtonsContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="IdentityButton" type="Button" parent="Control/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "I"

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/ButtonsContainer/IdentityButton"]
custom_minimum_size = Vector2(34, 34)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -34.0
offset_right = 34.0
grow_vertical = 0
theme_override_font_sizes/font_size = 18
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HadamardButton" type="Button" parent="Control/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "H"

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/ButtonsContainer/HadamardButton"]
custom_minimum_size = Vector2(34, 34)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -34.0
offset_right = 34.0
grow_vertical = 0
theme_override_font_sizes/font_size = 18
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauliXButton" type="Button" parent="Control/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "X"

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/ButtonsContainer/PauliXButton"]
custom_minimum_size = Vector2(34, 34)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -34.0
offset_right = 34.0
grow_vertical = 0
theme_override_font_sizes/font_size = 18
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauliYButton" type="Button" parent="Control/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Y"

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/ButtonsContainer/PauliYButton"]
custom_minimum_size = Vector2(34, 34)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -34.0
offset_right = 34.0
grow_vertical = 0
theme_override_font_sizes/font_size = 18
text = "4"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauliZButton" type="Button" parent="Control/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Z"

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/ButtonsContainer/PauliZButton"]
custom_minimum_size = Vector2(34, 34)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -34.0
offset_right = 34.0
grow_vertical = 0
theme_override_font_sizes/font_size = 18
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PiOverEightButton" type="Button" parent="Control/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Ï€/8"

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/ButtonsContainer/PiOverEightButton"]
custom_minimum_size = Vector2(34, 34)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -34.0
offset_right = 34.0
grow_vertical = 0
theme_override_font_sizes/font_size = 18
text = "6"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
